<resources>
    <string name="app_name">SAFER</string>
    <string name="hint_email">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_main_navigate">SAFER</string>
    <string name="title_activity_register">Registrate</string>
    <string name="navigation_drawer_open">Abrir Menu</string>
    <string name="navigation_drawer_close">Cerrar Menu</string>
    <string name="nav_header_title">Usuario.. </string>
    <string name="nav_header_subtitle">Email..</string>
    <string name="nav_header_desc">Cabecera</string>
    <string name="action_settings">Mas Opciones</string>
    <string name="hint_name">Nombre</string>
    <string name="register">Registrarte</string>
    <string name="hint_address">Dirección</string>
    <string name="link_register">¿No tienes cuenta? ¡Registrate AQUI!</string>
    <string name="term_condi">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>
    <string name="action_singOut">Cerrar sesion</string>
    <string name="conditionText">Terminos y Condiciones</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="publish">PUBLISH</string>
    <string name="publish_comment">Add a comment here</string>
    <string name="no_elements">There isn\'t still any element!</string>
    <string name="no_comments">There isn\'t still any comment!</string>
    <string name="feed_cannot_log_in">Cannot log in.</string>
    <string name="feed_cannot_send_action">Cannot send action.</string>
    <string name="feed_cannot_request_elements">Cannot request elements.</string>
    <string name="feed_error_updating_feed">Error updating feed.</string>
    <string name="user_not_logged">User should be logged in</string>
    <string name="comments_cannot_request_comments">Cannot request comments.</string>
    <string name="comments_cannot_publish_comment">Cannot publish comment.</string>
    <string name="photos_cannot_publish_photo">Cannot publish photo.</string>
    <string name="action_retry">Retry</string>

    <string name="login_disclaimer">Enjoy InstaMaterial right now!</string>

    <string name="menu_logout">Logout</string>

    <string name="cannot_log_user_out">Cannot log User Out</string>
    <string name="not_close_session">No se pudo cerrar sesión</string>
    <string name="not_revoke">No se pudo revocar el acceso</string>
    <string name="not_log_in">No se pudo iniciar sesión</string>
    <string name="log_out">Log Out</string>
    <string name="not_firebase_auth">No se pudo autenticar con Firebase</string>
    <string name="revoke">Revoke</string>

    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>

    <string name="facebook_app_id">471606226683155</string>
    <string name="fb_login_protocol_scheme">fb471606226683155</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="link_account">\t Cuenta</string>
    <string name="link_notification">\t Notificaciones</string>
    <string name="link_Privacity">\t Politica y Privacidad</string>
    <string name="link_About">\t Acerca de ...</string>
    <string name="link_logout">\t Cerrar Sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Mapa</string>
    <string name="safer_name_upper_case">SAFER</string>
    <string name="put_email">Ingrese Correo</string>
    <string name="put_password">Ingrese Contraseña</string>
    <string name="add_user_text_button">Agregar Usuario</string>
    <string name="connect_internet_access_exception">Por favor asegurece que este conectado a internet</string>
    <string name="connect_internet_exception">No se pudo conectar internet</string>
    <string name="reporter_button">REPORTAR</string>
</resources>
