<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnAccountSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:text="@string/link_account"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/user_op"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        />

    <Button
        android:id="@+id/btnNotificationSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:text="@string/link_notification"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/notification_op"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btnPrivacySetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:text="@string/link_Privacity"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/privacy_op"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btnAboutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:text="@string/link_About"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/information_op"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"/>

    <Button
        android:id="@+id/btnLogOutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_button"
        android:text="@string/link_logout"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:drawableLeft="@drawable/logout_op"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"/>

</LinearLayout>