<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:background="@color/colorSecondary">

    <TextView
        android:id="@+id/logo"
        android:layout_width="265dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/safer_icon"
        android:drawableLeft="@drawable/safer_icon"
        android:singleLine="true"
        android:text="@string/safer_name_upper_case"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:textSize="50dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:id="@+id/lEditEmail"
            android:hint="@string/hint_email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:theme="@style/EditTextTheme"
            android:importantForAutofill="no"
            android:padding="20dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" >

        <EditText
            android:id="@+id/lEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="20dp"
            android:theme="@style/EditTextTheme" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/colorSecondary" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_register"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:id="@+id/btnIrRegisterActivity"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        style="@style/FacebookLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"/>

</LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="88dp"
        android:layout_height="98dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:visibility="gone" />
</FrameLayout>
